Fixed whitespace not being preserved in log

--- a/openbullet2-web-client/src/app/main/components/config/config-debugger/config-debugger.component.scss
+++ b/openbullet2-web-client/src/app/main/components/config/config-debugger/config-debugger.component.scss
@@ -14,4 +14,5 @@
     font-family: Chivo Mono;
     margin-bottom: 5px;
     font-size: 14px;
+    white-space: pre;
 }
